--- a/public/scss/_generales.scss
+++ b/public/scss/_generales.scss
@@ -100,6 +100,10 @@ h6 {
     .mainBackground2 {
         opacity: 0.2 !important;
     }
+
+    .soloDesktop {
+        display: none;
+    }
 }
 
 @media (min-width:576px) and (max-width: 767px) {
@@ -134,12 +138,22 @@ h6 {
     }
 }
 
+@media (max-width:768px) {
+    .soloDesktop {
+        display: none;
+    }
+}
+
 @media (min-width:768px) {
     .ml-n2 {
         margin-left: -4rem !important;
     }
 
     .soloMobile {
+        display: none;
+    }
+
+    .boton-mobile-regresar {
         display: none;
     }
 }
