--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -47,13 +47,6 @@
     display: none;
 }
 
-.empleados-col-1 label {
-    padding-left: 0;
-    padding-right: 0;
-    margin-right: 0 !important;
-    margin-left: 0 !important;
-}
-
 .box-formulario-registros {
     width: 600px;
 }
@@ -221,7 +214,7 @@
 
 @media (max-width: 575px) {
     .box-formulario {
-        max-width: 320px !important;
+        max-width: 360px !important;
         padding-left: 0;
         padding-right: 0;
 
@@ -233,6 +226,10 @@
             }
         }
     }
+
+    .box-formulario-empleados {
+        max-width: 360px;
+    }
 }
 
 @media (max-width: 767px) {
@@ -243,6 +240,25 @@
     .box-formulario {
         margin-left: auto !important;
         margin-right: auto !important;
+        max-width: 460px;
+    }
+
+    .box-formulario-empleados {
+        max-width: 460px;
+
+        .empleados-col-1,
+        .empleados-col-2 {
+            width: 100%;
+            margin-left: auto !important;
+            margin-right: auto !important;
+            padding-left: 0;
+            padding-right: 0;
+        }
+
+        .form-group {
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 
     .formulario-registros {
@@ -266,6 +282,9 @@
     }
 
     .boton-mobile-regresar {
+        margin-left: auto;
+        margin-right: auto;
+
         button {
             display: inline;
             margin-left: auto;
@@ -274,9 +293,28 @@
     }
 }
 
+@media (min-width: 768px) {
+    .box-formulario-empleados {
+        width: 100%;
+    }
+
+    .empleados-col-1 label {
+        padding-left: 0;
+        padding-right: 0;
+        margin-right: 0 !important;
+        margin-left: 0 !important;
+    }
+
+}
+
 @media (max-width: 991px) {
     .box-formulario {
         width: 100%;
+    }
+
+    .box-formulario-empleados {
+        margin-left: auto !important;
+        margin-right: auto !important;
     }
 
     .min992 {
@@ -297,5 +335,11 @@
         margin-top: 1rem;
         margin-left: auto;
         margin-right: auto;
+    }
+}
+
+@media (min-width:992px) and (max-width: 1250px) {
+    .box-formulario-empleados {
+        margin-left: 2rem !important;
     }
 }
