--- a/public/scss/_generales.scss
+++ b/public/scss/_generales.scss
@@ -145,9 +145,6 @@ h6 {
 }
 
 @media (min-width:768px) {
-    .ml-n2 {
-        margin-left: -4rem !important;
-    }
 
     .soloMobile {
         display: none;
@@ -164,5 +161,11 @@ h6 {
             font-size: 3rem !important;
             left: 350px
         }
+    }
+}
+
+@media (min-width: 1251px) {
+    .ml-n2 {
+        margin-left: -4rem !important;
     }
 }
