--- a/public/scss/_generales.scss
+++ b/public/scss/_generales.scss
@@ -119,7 +119,8 @@ h6 {
     .titleBig {
         h1 {
             font-size: 2rem !important;
-            left: 350px
+            left: 350px;
+            top: 120px;
         }
     }
 
@@ -161,6 +162,18 @@ h6 {
             font-size: 3rem !important;
             left: 350px
         }
+    }
+}
+
+@media (max-width: 991px) {
+    .min992 {
+        display: none !important;
+    }
+}
+
+@media (max-width: 1200px) {
+    .min1200 {
+        display: none !important;
     }
 }
 
