--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -11,6 +11,8 @@
 .title-formularios {
     font-size: 1.8em;
     color: $secondarycolor;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .box-formulario-empleados .col-6 {
@@ -48,7 +50,8 @@
 }
 
 .box-formulario-registros {
-    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .generadores {
@@ -212,6 +215,17 @@
     padding-left: 1.5rem;
 }
 
+.formulario-registros-anulacion {
+    margin-left: auto !important;
+    margin-right: auto !important;
+    padding-right: 0;
+    padding-left: 0;
+
+    &:only-child {
+        margin-left: 0;
+    }
+}
+
 @media (max-width: 575px) {
     .box-formulario {
         max-width: 360px !important;
@@ -261,24 +275,15 @@
         }
     }
 
-    .formulario-registros {
-        padding-right: 0 !important;
-        width: 100% !important;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
     .anulacion-box {
         padding-right: 0;
+        margin-left: auto;
+        margin-right: auto;
 
         .form-group {
             padding-right: 0;
             margin-left: 0;
         }
-    }
-
-    .nombresApellidos-box {
-        margin-top: 2rem !important;
     }
 
     .boton-mobile-regresar {
@@ -294,6 +299,7 @@
 }
 
 @media (min-width: 768px) {
+
     .box-formulario-empleados {
         width: 100%;
     }
@@ -316,6 +322,7 @@
         margin-left: auto !important;
         margin-right: auto !important;
     }
+
 }
 
 @media (min-width: 992px) {
@@ -325,12 +332,15 @@
     }
 
     .title-formularios {
-        //overflow-x: visible !important;
         white-space: nowrap;
         margin-bottom: 1rem;
         margin-top: 1rem;
-        margin-left: auto;
-        margin-right: auto;
+    }
+}
+
+@media (max-width: 1199px) {
+    .nombresApellidos-box {
+        margin-top: 2rem !important;
     }
 }
 
